[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezpz"
dynamic = ["version"]
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = []
readme = "./docs/README.md"
description = 'Distributed Training, ezpz.'
authors = [{ name = "Sam Foreman", email = "saforem2@gmail.com" }]
dependencies = [
    "mpi4py",
    "torch",
    "xarray",
    "plotext",
    "ml_dtypes",
    "jax",
    "tqdm",
    "jaxlib",
    "jaxtyping",
    "sh",
    "joblib",
    "rich",
    "tensorboard",
    "seaborn",
    "omegaconf",
    "sentencepiece",
    "ipython",
    "hydra-core",
    "wandb",
    "hydra-colorlog",
    "ambivalent @ git+https://github.com/saforem2/ambivalent",
    "pyinstrument",
    "h5py",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
    "pudb",
    "pynvim",
    "neovim",
    "ruff",
    "ruff-lsp",
    "ipython",
    "ptipython",
    "jupyter",
]

[project.urls]
Documentation = "https://saforem2.github.io/ezpz"
Issues = "https://github.com/saforem2/ezpz/issues"
Source = "https://github.com/saforem2/ezpz"

[tool.hatch.version]
path = "src/ezpz/__about__.py"

[tool.hatch.build]
exclude = ["src/ezpz/outputs/", "**old**"]

[tool.hatch.metadata]
allow-direct-references = true


# [tool.hatch.build.targets.sdist]
#
# [tool.hatch.build.targets.wheel]
# packages = ["src/ezpz"]

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/ezpz --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["ezpz/__about__.py"]

[tool.coverage.report]

exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.uv.sources]
ezpz = { workspace = true }
