[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezpz"
dynamic = ["version"]
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = []
readme = "README.md"
description = 'Distributed training, :lemon: `ezpz`.'
authors = [{ name = "Sam Foreman", email = "saforem2@gmail.com" }]
dependencies = [
    "accelerate",
    "ambivalent @ git+https://github.com/saforem2/ambivalent",
    "evaluate",
    "h5py",
    "hydra-core",
    "mpi4py",
    "omegaconf",
    "plotext",
    "pyinstrument",
    "rich",
    "scikit-learn",
    "seaborn",
    "sh",
    "torch",
    "transformers>=4.50.1",
    "wandb",
    "xarray",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
    # "sentencepiece",
    # "joblib",
    # "ml_dtypes",
    # "tqdm",
    # "tensorboard",
    "ipython",
    # "hydra-colorlog",
    "pudb",
    "pynvim",
    "ruff",
    "black",
    "pyright",
    "isort",
    "ruff-lsp",
    "ipython",
    "ptipython",
    "jupyter",
]

[project.urls]
Documentation = "https://saforem2.github.io/ezpz"
Issues = "https://github.com/saforem2/ezpz/issues"
Source = "https://github.com/saforem2/ezpz"

[tool.hatch.version]
path = "src/ezpz/__about__.py"

[tool.hatch.build]
exclude = ["src/ezpz/outputs/", "**old**"]

[tool.hatch.metadata]
allow-direct-references = true


# [tool.hatch.build.targets.sdist]
#
# [tool.hatch.build.targets.wheel]
# packages = ["src/ezpz"]

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/ezpz --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["ezpz/__about__.py"]

[tool.coverage.report]

exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.uv.sources]
ezpz = { workspace = true }


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 80
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E402"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
