[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezpz"
dynamic = ["version"]
dependencies = [
    "ambivalent @ git+https://github.com/saforem2/ambivalent",
    "click",
    "evaluate",
    "hydra-core",
    "ipython",
    "numpy",
    "omegaconf",
    "plotext",
    "pyinstrument",
    "rich",
    "seaborn",
    "sh",
    "torchinfo",
    "transformers>=4.50.1",
    "wandb",
    "xarray",
    # "accelerate",
    # "h5py",
    # "tiktoken",
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
license = { file = "LICENSE" }
keywords = ["torch", "distributed", "training", "accelerate", "wandb"]
readme = "README.md"
description = 'Distributed training, :lemon: `ezpz`.'
authors = [{ name = "Sam Foreman", email = "saforem2@gmail.com" }]
maintainers = [{ name = "Sam Foreman", email = "saforem2@gmail.com" }]

[project.scripts]
ezpz = "ezpz.cli:main"
ezpz-test = "ezpz.cli.test_cmd:main"
ezpz-launch = "ezpz.cli.launch_cmd:main"
ezpz-yeet-env = "ezpz.utils.yeet_env:main"
ezpz-tar-env = "ezpz.utils.tar_env:main"
ezpz-doctor = "ezpz.doctor:main"
ezpz-generate = "ezpz.examples.generate:main"
ezpz-generate-tui = "ezpz.examples.generate_tui:main"

[project.optional-dependencies]
vit = ["timm"]
mpi = ["mpi4py"]
# xpu = ["pytorch-triton-xpu>=3.3.0 ; sys_platform == 'linux'"]
xpu = ["pytorch-triton-xpu"]
torch = ["torch", "torchvision"]
docs = [
    "mkdocs",
    "mkdocstrings",
    "mkdocs-material",
    "mkdocs-autorefs",
    "mkdocstrings-python",
    "mkdocs-mermaid2-plugin",
    "mkdocs-glightbox",
    "pymdown-extensions",
]
dev = [
    "ty>=0.0.1a8",
    "pyink",
    "bpython",
    "ipython",
    "isort",
    "jupyter",
    "ptipython",
    "pudb",
    "pynvim",
    "pyright",
    "ruff",
    "tensorboard",
    # "hydra-colorlog",
    # "tensorboard",
    "pytest>=9.0.2",
]

[project.urls]
Documentation = "https://saforem2.github.io/ezpz"
Issues = "https://github.com/saforem2/ezpz/issues"
Source = "https://github.com/saforem2/ezpz"

[tool.hatch.version]
path = "src/ezpz/__about__.py"

[tool.hatch.build]
exclude = ["src/ezpz/outputs/", "**old**"]

[tool.hatch.metadata]
allow-direct-references = true


# [tool.hatch.build.targets.sdist]
#
# [tool.hatch.build.targets.wheel]
# packages = ["src/ezpz"]

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov", "pytest-mock", "numpy"]

[tool.hatch.envs.default.scripts]
test = "pytest tests/"
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/ezpz --cov=tests"
no-cov = "pytest tests/"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311", "312"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["src/ezpz/__about__.py"]

[tool.coverage.report]

exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.uv]
override-dependencies = [
    "torch; sys_platform == 'never'",
    "torchaudio; sys_platform == 'never'",
    "torchvision; sys_platform == 'never'",
    "mpi4py; sys_platform == 'never'",
]
conflicts = [[{ extra = "xpu" }, { extra = "cpu" }, { extra = "cu128" }]]

# [tool.uv.sources]
# ezpz = { workspace = true }
# torch = [
# { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
# { index =


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 79
indent-width = 4

# Assume Python 3.10
# target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E402"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pycodestyle]
max-line-length = 79

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
